# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,15 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import organiserRouter from "./organiser";
 import authRouter from "./auth";
+import profileRouter from "./profile";
+import storageRouter from "./storage";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(authRouter);
 router.use(organiserRouter);
+router.use(profileRouter);
+router.use(storageRouter);
 
 export default router;
